# ChangeLog for x11-libs/libxklavier
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxklavier/ChangeLog,v 1.108 2008/03/17 23:24:13 leio Exp $

*libxklavier-3.5 (17 Mar 2008)

  17 Mar 2008; Mart Raudsepp <leio@gentoo.org> +libxklavier-3.5.ebuild:
  Version bump, updating translation scheme to work with xkeyboard-config-1.2.
  The upgrade from 3.3 to 3.5 will have an ABI break and revdep-rebuilding is
  required, see ewarn message after upgrade for details

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> libxklavier-3.3.ebuild:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org> libxklavier-3.3.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  libxklavier-3.3.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> libxklavier-3.3.ebuild:
  Marking libxklavier-3.3 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  libxklavier-3.3.ebuild:
  stable x86, bug 208366

*libxklavier-3.3 (13 Nov 2007)

  13 Nov 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +libxklavier-3.3.ebuild:
  Version bump from upstream

  13 Nov 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/libxklavier-2.0-config_xkb.patch,
  -files/libxklavier-3.0-libxml.diff, -libxklavier-2.0-r1.ebuild,
  -libxklavier-3.1.ebuild:
  prune unused versions

  22 Sep 2007; Tom Gall <tgall@gentoo.org> libxklavier-3.2.ebuild:
  stable on ppc64

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> libxklavier-3.2.ebuild:
  Stable for HPPA (bug #185823).

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> libxklavier-3.2.ebuild:
  Stable on x86, bug #185823.

  10 Aug 2007; Christoph Mende <angelos@gentoo.org> libxklavier-3.2.ebuild:
  Stable on amd64 wrt bug #185823

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> libxklavier-3.2.ebuild:
  alpha/ia64 stable wrt #185823
