@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/gswitchit/${P}.tar.gz"
 
 LICENSE="LGPL-2"
 SLOT="0"
-KEYWORDS="~amd64-linux ~ia64-linux ~mips-linux ~x86-linux ~x86-solaris"
+KEYWORDS="~amd64-linux ~x86-linux ~x86-solaris"
 IUSE="doc"
 
 RDEPEND="||	( x11-misc/xkeyboard-config x11-misc/xkbdata )
