@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libxklavier
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxklavier/ChangeLog,v 1.108 2008/03/17 23:24:13 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxklavier/ChangeLog,v 1.109 2008/05/22 21:28:38 eva Exp $
+
+*libxklavier-3.6 (22 May 2008)
+
+  22 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +libxklavier-3.6.ebuild:
+  bump to 3.6. Added API for countries and languages (depend on iso-codes).
 
 *libxklavier-3.5 (17 Mar 2008)
 
